Added reservation checks